[tool.poetry]
name = "chiffre"
version = "0.1.0"
description = ""
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^3.8.1"
psycopg2-binary = "^2.9.5"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
